update: static release

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -5,6 +5,8 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
+    tags:    # Runs on tags
+      - '*'  # This wildcard matches any tag
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
